--- a/.github/workflows/daily_commit.yml
+++ b/.github/workflows/daily_commit.yml
@@ -25,5 +25,5 @@ jobs:
           git config --global user.email "23ds3000241@ds.study.iitm.ac.in"
           git add status.log
           git commit -m "Automated commit: $(date)" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.IITM Project }}@github.com/${{ github.repository }}.git
+          git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git
 
